// Copyright 2017, TCN Inc.
// All rights reserved.

// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are
// met:

//     * Redistributions of source code must retain the above copyright
// notice, this list of conditions and the following disclaimer.
//     * Redistributions in binary form must reproduce the above
// copyright notice, this list of conditions and the following disclaimer
// in the documentation and/or other materials provided with the
// distribution.
//     * Neither the name of TCN Inc. nor the names of its
// contributors may be used to endorse or promote products derived from
// this software without specific prior written permission.

// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

syntax = "proto3";

package tests;

option go_package="github.com/tcncloud/protoc-gen-persist/tests/sql/little_of_everything;little_of_everything";
option (persist.pkg)="github.com/tcncloud/protoc-gen-persist/tests/sql/little_of_everything;little_of_everything";

import "persist/options.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";


import "tests/test/test.proto";

enum MyEnum {
    OPTION_0 = 0;
    OPTION_1 = 1;
}

enum MappedEnum {
	OPT_0 = 0;
	OPT_1 = 1;
}

message ExampleTable1 {
    enum InnerEnum {
        OP_0 = 0;
        OP_1 = 1;
    }
    message InnerMessage {
        int32 id = 1;
    }
    int32 table_id = 1;
    string key = 2;
    string value = 3;
    InnerMessage inner_message = 4;
    InnerEnum inner_enum = 5;
    repeated string string_array = 6;
    bytes bytes_field = 7;
    google.protobuf.Timestamp start_time = 10;
    tests.test.Test test_field = 100;
    oneof skip_one_of {
      int32 test_id = 1001;
      string test_value = 1002;
      tests.test.Test test_out_message = 1003;
    }
	MyEnum myyenum = 101;
	tests.test.TestEnum testsenum = 102;
	MappedEnum mappedenum = 103;

}

message ExternalTypeTestMessage {
    google.protobuf.Timestamp time = 1;
}

message CountRows {
  int64 count = 1;
}


service Testservice1 {
    option (persist.service_type) = SQL;
    option (persist.mapping) = {
			types:
			[{
                proto_type_name: ".google.protobuf.Timestamp"
                proto_type:  TYPE_MESSAGE
            }, {
                proto_type_name: ".tests.MappedEnum"
                proto_type: TYPE_ENUM
            }]
    };
    rpc UnaryExample1(ExampleTable1) returns (ExampleTable1) {
        option (persist.ql) = {
            query: ["SELECT id AS 'table_key', id, value, msg as inner_message, status as inner_enum FROM test_table WHERE id = $1"]
            arguments: ["table_id","start_time"]
        };
    }

    rpc UnaryExample2(tests.test.Test) returns (ExampleTable1) {
        option (persist.ql) = {
            query: ["SELECT id AS 'table_id', key, value, msg as inner_message, status as inner_enum FROM test_table WHERE id = $1"]
            arguments: ["id"]
        };
    }
    rpc ServerStreamSelect(ExampleTable1) returns (stream ExampleTable1) {
        option (persist.ql) = {
            query: ["SELECT id AS 'table_id', key, value, msg as inner_message, status as inner_enum FROM test_table WHERE id = $1"]
            arguments: ["table_id"]
        };
    }

    rpc ClientStreamingExample(stream ExampleTable1) returns (CountRows) {
        option (persist.ql) = {
            query: ["SELECT id AS 'table_id', key, value, msg as inner_message, status as inner_enum FROM test_table WHERE id = $1"]
            arguments: ["table_id"]
        };
    }

}

service NotEnabledService{

}
